Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
 stages:
-  - containerize
+  - package
+
+image: python:3.7
 
 variables:
   DOCKER_REGISTRY: "docker.zigpos.de" # for pulling docker images
