--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,22 +6,21 @@ variables:
   REPO_GROUP: "zpBluetoothClassicScanner"
   DOCKER_CLI_EXPERIMENTAL: "enabled"
 
-build raspi docker image:
-  image: docker.zigpos.de/docker-ci-arm64
+Docker (pre-)release arm64:
+  stage: docker
+  image: hub.zigpos.com/ci/docker-ci:2022.1
   tags:
     - docker-arm64
-  services:
-    - docker.zigpos.de/dind-ci-service-arm64
-  stage: docker
+  #services:
+  #  - hub.zigpos.com/dind-ci-service-arm64
   script:
-    - 'cd DB-Docker'
     - 'BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")'
     - 'COMMIT_REF_NAME=$CI_COMMIT_REF_NAME'
-    - 'VERSION=${COMMIT_REF_NAME//release-/""}${DOCKER_TAG_SUFFIX}'
-    - 'IMAGE_NAME="$DOCKER_REGISTRY/$REPO_GROUP:$VERSION"'
+    - 'VERSION=${COMMIT_REF_NAME##release-}'
+    - 'IMAGE_NAME="$DOCKER_HUB_DEV_REPOSITORY/$REPO_GROUP:$VERSION"'
     - 'echo $IMAGE_NAME'
-    - 'docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD" "$DOCKER_REGISTRY"'
-    - 'docker build --build-arg BUILD_DATE=$BUILD_DATE --build-arg VERSION=$VERSION -t "$IMAGE_NAME"-arm64 .'
+    - 'docker login -u "$DOCKER_HUB_USER" -p "$DOCKER_HUB_PASSWORD" "$DOCKER_HUB_REPOSITORY"'
+    - 'docker build --build-arg BUILD_DATE=$BUILD_DATE --build-arg "GF_INSTALL_IMAGE_RENDERER_PLUGIN=true" --build-arg VERSION=$VERSION -t "$IMAGE_NAME"-arm64 .'
     - 'docker push "$IMAGE_NAME"-arm64'
   only:
     - /^release-.*$/
