--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ stages:
   - containerize
 
 variables:
-  DOCKER_REGISTRY: "hub.zigpos.com"
+  DOCKER_REGISTRY: "hub.zigpos.com/dev"
   REPO_GROUP: "zpBTScanner"
   DOCKER_CLI_EXPERIMENTAL: "enabled"
 
