--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,1 +1,10 @@
-echo "hello"
+stages:
+  - containerize
+
+variables:
+  DOCKER_REGISTRY: "hub.zigpos.com/dev"
+  REPO_GROUP: "zpBTScanner"
+  DOCKER_CLI_EXPERIMENTAL: "enabled"
+
+Docker release arm64:
+echo 'hello'
