--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ variables:
   DOCKER_CLI_EXPERIMENTAL: "enabled"
 
 Docker release arm64:
+  stage: containerize
   image: hub.zigpos.com/ci/docker-ci:2022.1
   tags:
     - docker-arm64
