--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,4 +13,11 @@ Docker release arm64:
     - docker-arm64
   script:
     - "echo otha"
+    - export DOCKER_BUILDKIT=1
+    - 'BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")'
+    - 'VERSION=${CI_COMMIT_REF_NAME}'
+    - 'IMAGE_NAME="$DOCKER_REGISTRY/$REPO_GROUP:$VERSION"-arm64'
+    - "ARCH=$(uname -m)"
+    - "echo Build+Push $IMAGE_NAME for $ARCH"
+
 
