--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,5 +19,9 @@ Docker release arm64:
     - 'IMAGE_NAME="$DOCKER_REGISTRY/$REPO_GROUP:$VERSION"-arm64'
     - "ARCH=$(uname -m)"
     - "echo Build+Push $IMAGE_NAME for $ARCH"
+    - 'docker login -u "$DOCKER_HUB_USER" -p "$DOCKER_HUB_PASSWORD" "$DOCKER_REGISTRY"'
+    - 'docker build --build-arg BUILD_DATE=$BUILD_DATE --build-arg VERSION=$VERSION -t "$IMAGE_NAME" .'
+    - 'docker push "$IMAGE_NAME"'
+
 
 
