--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,8 @@ Docker release arm64:
     - "echo otha"
     - export DOCKER_BUILDKIT=1
     - 'BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")'
-    - 'VERSION=${CI_COMMIT_REF_NAME}'
+    - 'VERSION=${commit_ref_name//release-/""}'
+    - 'echo "Releasing Version "$VERSION'
     - 'IMAGE_NAME="$DOCKER_REGISTRY/$REPO_GROUP:$VERSION"-arm64'
     - "ARCH=$(uname -m)"
     - "echo Build+Push $IMAGE_NAME for $ARCH"
