--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,9 +15,9 @@ Docker release arm64:
     - "echo otha"
     - export DOCKER_BUILDKIT=1
     - 'BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")'
-    - 'VERSION=${commit_ref_name}'
+    - 'VERSION=${CI_COMMIT_REF_NAME//release-/""}'
     - 'echo "Releasing Version "$VERSION'
-    - 'IMAGE_NAME="$DOCKER_REGISTRY/$REPO_GROUP"-arm64'
+    - 'IMAGE_NAME="$DOCKER_HUB_DEV_REPOSITORY/$REPO_GROUP:$VERSION"'
     - "ARCH=$(uname -m)"
     - "echo Build+Push $IMAGE_NAME for $ARCH"
     - 'docker login -u "$DOCKER_HUB_USER" -p "$DOCKER_HUB_PASSWORD" "$DOCKER_REGISTRY"'
