Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ Docker release arm64:
     - "echo Build+Push $IMAGE_NAME for $ARCH"
     - 'docker login -u "$DOCKER_HUB_USER" -p "$DOCKER_HUB_PASSWORD" "$DOCKER_REGISTRY"'
     - 'docker build --build-arg BUILD_DATE=$BUILD_DATE --build-arg "GF_INSTALL_IMAGE_RENDERER_PLUGIN=true" --build-arg VERSION=$VERSION -t "$IMAGE_NAME"-arm64 .'
-    - 'docker push "$IMAGE_NAME"'
+    - 'docker push "$IMAGE_NAME"-arm64'
 
 
 
