--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ Docker release arm64:
     - 'BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")'
     - 'COMMIT_REF_NAME=$CI_COMMIT_REF_NAME'
     - 'VERSION=${COMMIT_REF_NAME##release-}'
-    - 'IMAGE_NAME="$DOCKER_HUB_DEV_REPOSITORY/$REPO_GROUP:$VERSION"'
+    - 'IMAGE_NAME="$DOCKER_REGISTRY/$REPO_GROUP:$VERSION"'
     - 'echo $IMAGE_NAME'
     - 'docker login -u "$DOCKER_HUB_USER" -p "$DOCKER_HUB_PASSWORD" "$DOCKER_HUB_REPOSITORY"'
     - 'docker build --build-arg BUILD_DATE=$BUILD_DATE --build-arg "GF_INSTALL_IMAGE_RENDERER_PLUGIN=true" --build-arg VERSION=$VERSION -t "$IMAGE_NAME"-arm64 .'
