--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,6 @@ Docker release arm64:
     - 'IMAGE_NAME="$DOCKER_REGISTRY/$REPO_GROUP:$VERSION"'
     - 'echo $IMAGE_NAME'
     - 'docker login -u "$DOCKER_HUB_USER" -p "$DOCKER_HUB_PASSWORD" "$DOCKER_HUB_REPOSITORY"'
-    - 'docker build --build-arg BUILD_DATE=$BUILD_DATE --build-arg "GF_INSTALL_IMAGE_RENDERER_PLUGIN=true" --build-arg VERSION=$VERSION -t "$IMAGE_NAME"-arm64 .'
-    - 'docker push "$IMAGE_NAME"-arm64'
+    - 'docker build --build-arg BUILD_DATE=$BUILD_DATE --build-arg VERSION=$VERSION -t "$IMAGE_NAME" .'
+    - 'docker push "$IMAGE_NAME"'
 
